--- a/Css/style.css
+++ b/Css/style.css
@@ -11,6 +11,9 @@
 
 .clean-one{
     background-image: url(../Images/Rectangle\ 236.png);
+}
+
+.apt-2{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,23 +21,14 @@
 
 .first-pic{
     background-image: url(../Images/cdc-jjrXvzbqC5E-unsplash\ \(1\).jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .second-pic{
     background-image: url(../Images/benjamin-child-0sT9YhNgSEs-unsplash.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .third-pic{
     background-image: url(../Images/diego-san-2hRHb1OGRYs-unsplash\ \(1\).jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .pictures{
@@ -55,6 +49,9 @@
 
 .test-img-one{
     background-image: url(../Images/amy-hirschi-b3AYk8HKCl0-unsplash.jpg);
+}
+
+.apt{
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -64,29 +61,14 @@
 
 .test-img-two{
     background-image: url(../Images/brooke-cagle-NoRsyXmHGpI-unsplash.jpg);
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 60px !important;
-    width: 60px !important;
 }
 
 .test-img-three{
     background-image: url(../Images/benjamin-child-0sT9YhNgSEs-unsplash.jpg);
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 60px !important;
-    width: 60px !important;
 }
 
 .test-img-four{
     background-image: url(../Images/ali-morshedlou-WMD64tMfc4k-unsplash.jpg);
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 60px !important;
-    width: 60px !important;
 }
 
 .testi{
@@ -105,64 +87,41 @@
     box-shadow: 0px 0px 4px 5px rgba(88, 188, 221, 0.8)
 }
 
+.apt-height{
+    height: 260px !important;
+}
+
 .vibe-one{
     background-image: url(../Images/towfiqu-barbhuiya--9gPKrsbGmc-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 260px !important;
 }
 
 .vibe-two{
     background-image: url(../Images/artem-beliaikin-42OiN2WhCPs-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 260px !important;
 }
 
 .vibe-three{
     background-image: url(../Images/nick-hillier-yD5rv8_WzxA-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 260px !important;
+}
+
+.apt-height-2{
+    height: 220px !important;
+    width: 220px;
 }
 
 .ceo{
     background-image: url(../Images/eye-for-ebony-aZzXKGcyWqk-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 220px !important;
-    width: 220px;
 }
 
 .coo{
     background-image: url(../Images/jurica-koletic-7YVZYZeITc8-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 220px !important;
-    width: 220px;
 }
 
 .cfo{
     background-image: url(../Images/christian-lunde-v-dd__G7g7k-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 220px !important;
-    width: 220px;
 }
 
 .s-m{
     background-image: url(../Images/jeffery-erhunse-BQMZ5ligqps-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 220px !important;
-    width: 220px;
 }
 
 .glow{
@@ -171,23 +130,14 @@
 
 .pic-one{
     background-image: url(../Images/towfiqu-barbhuiya-ho-p7qLBewk-unsplash.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .pic-two{
     background-image: url(../Images/dan-gold-aJN-jjFLyCU-unsplash.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .pic-three{
     background-image: url(../Images/jon-tyson-jgaxGjXKlpw-unsplash.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .change{
